--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <div class="col-4" style="background-color: aqua;">
 
         <div class="row">
-          <!-- Searcg Bar -->
+          <!-- Search Bar -->
           <div class="col-12">
             <h3>Search for a City:</h3>
             <div class="input-group mb-3">
-              <input type="search" class="form-control" id="searchBar" placeholder="Name of the city...">
+              <input type="search" class="form-control" id="searchCity" placeholder="Name of the city...">
               <button class="btn btn-outline-primary" id="searchBtn"><i class="fas fa-search-location"></i></button>
             </div>
 
@@ -48,7 +48,7 @@
         <div class="row">
             <!-- Saved Search -->
           <div class="col-12">
-            <ul class="list-group" id="searchHistory">
+            <ul class="list-group" id="searchedCities">
               <!-- display <li> here, style class="list-group-item list-group-item-action" -->
             Saved Search
             </ul>
@@ -61,7 +61,7 @@
       <div class="col-8" style="background-color: rgb(212, 0, 255);">
         
         <div class="row">
-          <!-- Weather for today -->
+          <!-- Current Weather -->
           <div class="col-12 mb-3" id="currentCity">
             <!-- display <p> here with currentCity -->
             Current City
