--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
 
       <!-- SEARCH SECTION -->
-      <div class="col-4" style="background-color: aqua;">
+      <div class="col-4">
 
         <div class="row">
           <!-- Search Bar -->
@@ -50,7 +50,6 @@
           <div class="col-12">
             <ul class="list-group" id="searchedCities">
               <!-- display <li> here, style class="list-group-item list-group-item-action" -->
-            Saved Search
             </ul>
           </div>
         </div>
@@ -58,13 +57,12 @@
       </div>
 
       <!-- RESULT SECTION -->
-      <div class="col-8" style="background-color: rgb(212, 0, 255);">
+      <div class="col-8" sid="resultSection">
         
         <div class="row">
           <!-- Current Weather -->
-          <div class="col-12 mb-3" id="currentCity">
+          <div class="col-12 mb-3" id="currentWeather">
             <!-- display <p> here with currentCity -->
-            Current City
           </div>
         </div>
 
@@ -79,14 +77,12 @@
           <!-- Forecast for 5 days -->
           <div class="col-12" id="forecast">
             <!-- display <div> with 5 cards -->
-            Forecast
           </div>
         </div>
 
       </div>
 
     </div>
-
 
      <!-- JAVASCRIPT FILES -->
          <!-- jQuery JS -->
