Almost done, working on last bit - local storage

--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
           <div class="col-12">
             <h3>Search for a City:</h3>
             <div class="input-group mb-3">
-              <input type="search" class="form-control" id="searchCity" placeholder="Name of the city...">
-              <button class="btn btn-info" id="searchBtn"><i class="fas fa-search-location"></i></button>
+              <input type="search" class="form-control" id="searchCity" placeholder="Ex: Melbourne, AU">
+              <button type="submit" class="btn btn-info" id="searchBtn"><i class="fas fa-search-location"></i></button>
             </div>
-
           </div>
         </div>
       
         <div class="row">
-            <!-- Saved Search -->
+          <!-- Saved Search -->
           <div class="col-12">
             <ul class="list-group" id="searchedCities">
               <!-- display <li> here, style class="list-group-item list-group-item-action" -->
@@ -70,7 +69,7 @@
         <div class="row">
           <!-- Forecast for 5 days -->
           <div class="col-12">
-            <h3>5- Day Forecast:</h3>
+            <h3>5-Day Forecast:</h3>
           </div>
         </div>
 
