--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
- 
-     <!-- STYLE FILES -->
-         <!-- Reset Style -->
-         <link rel="stylesheet" href="./assets/css/reset.css" />
-         <!-- JavaScript for Icons from FontAwesome -->
-         <script src="https://kit.fontawesome.com/1228d6a68f.js" crossorigin="anonymous"></script>
-         <!-- Bootstrap -->
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
-         rel="stylesheet" 
-         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
-         crossorigin="anonymous">
-         <!-- Personal Style -->
-         <link rel="stylesheet" href="./assets/css/style.css" />
-
-     <title>Weather Dashboard</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- STYLE FILES -->
+      <!-- Reset Style -->
+      <link rel="stylesheet" href="./assets/css/reset.css" />
+      <!-- Bootstrap -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+      crossorigin="anonymous">
+      <!-- Personal Style -->
+      <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Weather Dashboard</title>
   </head>
 
   <body>
@@ -28,74 +24,72 @@
     </div>
 
     <!-- MAIN CONTAINER -->
-    <div class="row">
-
-      <!-- SEARCH SECTION -->
-      <div class="col-3">
-
-        <div class="row">
+    <div class="container">
+      <div class="row">
+ 
+        <!-- SEARCH SECTION -->
+        <div class="col-3">
           <!-- Search Bar -->
-          <div class="col-12">
-            <h3>Search for a City:</h3>
-            <div class="input-group mb-3">
-              <input type="search" class="form-control" id="searchCity" placeholder="Ex: Melbourne, AU">
-              <button type="submit" class="btn btn-info" id="searchBtn"><i class="fas fa-search-location"></i></button>
+          <h3>Search for a City:</h3>
+          <div class="input-group mb-3">
+            <input type="search" class="form-control" id="searchCity" placeholder="Ex: Melbourne, AU">
+            <button type="submit" class="btn btn-info" id="searchBtn"><i class="fas fa-search-location"></i></button>
+          </div>
+          <!-- Clear All Button -->
+          <div class="row">
+             <button type="button" class="btn btn-outline-danger mb-3" id="clearAllBtn">Clear All</button>    
+          </div>
+          <!-- Saved Search -->    
+          <div class="row">
+            <div class="col-12">
+              <ul class="list-group" id="searchedCities">
+                <!-- display <li> here, style class="list-group-item list-group-item-action" -->
+              </ul>
             </div>
           </div>
         </div>
-      
-        <div class="row">
-          <!-- Saved Search -->
-          <div class="col-12">
-            <ul class="list-group" id="searchedCities">
-              <!-- display <li> here, style class="list-group-item list-group-item-action" -->
-            </ul>
-          </div>
-        </div>
-
+ 
+       <!-- RESULT SECTION -->
+       <div class="col-9" id="resultSection">
+         <!-- Current Weather -->
+         <div class="row">
+           <h3>Current Weather:</h3>
+           <div class="col-12 mb-3" id="currentWeather">
+             <!-- display <p> here with currentCity -->
+           </div>
+         </div>
+         <!-- Forecast for 5 days -->
+         <div class="row">
+           <div class="col-12">
+             <h3>5-Day Forecast:</h3>
+           </div>
+         </div>
+         <!-- Weather Cards -->
+         <div class="row" id="forecast">
+           <!-- display <div> with 5 cards -->
+         </div>
+       </div>
+ 
       </div>
-
-      <!-- RESULT SECTION -->
-      <div class="col-9" id="resultSection">
-        
-        <div class="row">
-          <!-- Current Weather -->
-          <h3>Current Weather:</h3>
-          <div class="col-12 mb-3" id="currentWeather">
-            <!-- display <p> here with currentCity -->
-          </div>
-        </div>
-
-        <div class="row">
-          <!-- Forecast for 5 days -->
-          <div class="col-12">
-            <h3>5-Day Forecast:</h3>
-          </div>
-        </div>
-
-        <div class="row row-cols-1 row-cols-md-5 g-2" id="forecast">
-            <!-- display <div> with 5 cards -->
-        </div>
-
-      </div>
-
     </div>
 
-     <!-- JAVASCRIPT FILES -->
-         <!-- jQuery JS -->
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
-         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
-         crossorigin="anonymous"></script>
-         <!-- Moment JS -->
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" 
-         integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" 
-         crossorigin="anonymous"></script>
-         <!-- Bootstrap JS -->
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
-         sintegrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" 
-         crossorigin="anonymous">
-        </script>
-         <!-- Personal JS -->
-         <script src="./assets/js/script.js"></script>
+    <!-- JAVASCRIPT FILES -->
+     <!-- JavaScript for Icons from FontAwesome -->
+     <script src="https://kit.fontawesome.com/1228d6a68f.js" crossorigin="anonymous"></script>
+     <!-- jQuery JS -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
+     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
+     crossorigin="anonymous"></script>
+     <!-- Moment JS -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" 
+     integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" 
+     crossorigin="anonymous"></script>
+     <!-- Bootstrap JS -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
+     sintegrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" 
+     crossorigin="anonymous">
+     </script>
+     <!-- Personal JS -->
+     <script src="./assets/js/script.js"></script>
   </body>
 </html>
